JumpScript/tests/baselines/reference/circularModuleImports.errors.txt
tests/cases/compiler/circularModuleImports.jump(5,5): error TS2303: Circular definition of import alias 'A'.


==== tests/cases/compiler/circularModuleImports.jump (1 errors) ====
    module M
     
    {
     
        import A = B;
        ~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'A'.
     
        import B = A;
     
    }
    